# notice

./: .gitignore  index.html  package-lock.json  package.json  打包命令.md  设计文档.md
.claude/: settings.local.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  reminder.rs  settings.rs
src-tauri/src/models/: mod.rs  reminder.rs  reminder_log.rs  settings.rs
src-tauri/src/notification/: mod.rs  popup.rs  serverchan.rs  tray.rs
src-tauri/src/scheduler/: manager.rs
src-tauri/src/services/: mod.rs  reminder_service.rs  settings_service.rs
src-tauri/src/storage/: database.rs  mod.rs  reminder_log_repo.rs  reminder_repo.rs  settings_repo.rs
src-tauri/src/utils/: time.rs
src/assets/styles/: main.css
src/components/common/: AppLogo.vue  TitleBar.vue
src/components/reminder/: ReminderCard.vue  ReminderForm.vue  ReminderList.vue  ReminderPopup.vue
src/router/: index.ts
src/services/: reminder.ts  settings.ts
src/stores/: reminder.ts  settings.ts
src/types/: reminder.ts  settings.ts
src/views/: HomeView.vue  PopupView.vue  SettingsView.vue
